; ModuleID = '/home/carl/AnghaBench/reactos/subsystems/mvdm/ntvdm/console/extr_console.c_VdmMenuExists.c'
source_filename = "/home/carl/AnghaBench/reactos/subsystems/mvdm/ntvdm/console/extr_console.c_VdmMenuExists.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ID_CAPTURE_MOUSE = common dso_local global i64 0, align 8
@VdmMenuPos = common dso_local global i64 0, align 8
@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @VdmMenuExists to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @VdmMenuExists(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call i64 @GetMenuItemCount(i32 %6)
  store i64 %7, i64* %4, align 8
  store i64 0, i64* %5, align 8
  br label %8

8:                                                ; preds = %23, %1
  %9 = load i64, i64* %5, align 8
  %10 = load i64, i64* %4, align 8
  %11 = icmp sle i64 %9, %10
  br i1 %11, label %12, label %26

12:                                               ; preds = %8
  %13 = load i32, i32* %3, align 4
  %14 = load i64, i64* %5, align 8
  %15 = call i64 @GetMenuItemID(i32 %13, i64 %14)
  %16 = load i64, i64* @ID_CAPTURE_MOUSE, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %22

18:                                               ; preds = %12
  %19 = load i64, i64* %5, align 8
  %20 = sub nsw i64 %19, 1
  store i64 %20, i64* @VdmMenuPos, align 8
  %21 = load i32, i32* @TRUE, align 4
  store i32 %21, i32* %2, align 4
  br label %28

22:                                               ; preds = %12
  br label %23

23:                                               ; preds = %22
  %24 = load i64, i64* %5, align 8
  %25 = add nsw i64 %24, 1
  store i64 %25, i64* %5, align 8
  br label %8

26:                                               ; preds = %8
  %27 = load i32, i32* @FALSE, align 4
  store i32 %27, i32* %2, align 4
  br label %28

28:                                               ; preds = %26, %18
  %29 = load i32, i32* %2, align 4
  ret i32 %29
}

declare dso_local i64 @GetMenuItemCount(i32) #1

declare dso_local i64 @GetMenuItemID(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
